--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=Top-Songs-Service
 
 spotify.client-id=32d796244b024c48a61a26f9ecef951f
 spotify.client-secret=3ea69a1221e746aa867dbad993733960
-spotify.redirect-uri=https://7c7b-117-206-59-23.ngrok-free.app/callback
+spotify.redirect-uri=https://spotify-top-songs-production.up.railway.app/callback
 
