Updated redirect uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=Top-Songs-Service
 
-spotify.client-id=32d796244b024c48a61a26f9ecef951f
-spotify.client-secret=3ea69a1221e746aa867dbad993733960
-spotify.redirect-uri=https://spotify-top-songs-production.up.railway.app/callback
+spotify.client-id=cId
+spotify.client-secret=csecret
+#spotify.redirect-uri=https://spotify-top-songs-production.up.railway.app/callback
+spotify.redirect-uri=http://localhost:8080/callback
+
 
